--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,21 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 6px;  
+  background-color: transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 1);  
+  border-radius: 10px;  
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.5); 
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;  
+}
